objects/JHJX__SvcDictInfo__c.object
<CustomObject>
    <description>JXChange Service Dictonary Information</description>
    <fields>
        <fullName>JHJX__Business_Operation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__ElemName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Element Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__ElemValDesc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Element Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__ElemValDetail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Element Value Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__ElemValTxt__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__ElemValue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__IncludeAccountFlow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include record in AccountBooking Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JHJX__IncludeCustomerFlow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include record in Customer Booking Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JHJX__IncludeDepositFlow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include record in Deposit Booking Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JHJX__IncludeLoanFlow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include record in Loan Booking Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JHJX__Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__UserDefField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Defined Field Usage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JHJX__default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JHJX__hide__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Element from displaying in UI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JHJX__uid__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>UID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>SvcDictInfo</label>
    <nameField>
        <displayFormat>JX-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SvcDictInfo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>